--- a/jetfi_wifi_jp/css/wifi-style.css
+++ b/jetfi_wifi_jp/css/wifi-style.css
@@ -26,10 +26,10 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 *{ -ms-touch-action: manipulation; touch-action: manipulation; }
 
 /*===== start ======*/
-.header_container{ z-index:100; width: 100%; background-color: #fff; padding:16px 26px;border-bottom: 1px solid #d6d6d6;}
+.header_container{ z-index:100; width: 100%; background-color: #fff; padding:16px 26px;border-bottom: 1px solid #d6d6d6; border-left: 15px solid #f8db2a;}
 .header_container p.tagline{ float: left; font-size: 13px; margin-left:24px; font-weight: 500; padding-top: 3px; }
 .header_container a.gnav-logo{ float: left; display: inline-block; }
-.header_container a.gnav-logo img{ width: 110px; max-height: 44px;}
+.header_container a.gnav-logo img{ width: 145px; max-height: 44px;}
 
 
 .img_default, .img_default::before, .img_default::after{ background-position: center center; background-repeat: no-repeat; background-size: contain;}
@@ -43,8 +43,8 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container .top_banner .middle_content p.left_p{ position: absolute; top: 10px; left: 25px; font-size: 17px; font-weight: 600; color: #fff; text-shadow: 0 0 5px rgba(0,0,0,.9), 2px 2px 3px rgba(0,0,0,.8);  font-weight: bold\9; font-weight: bold\0 ; +font-weight: bold; _font-weight: bold;}
 
 .main_container .home_banner h3{ padding-top: 30px; }
-.main_container .home_banner p span{ font-size: 25px; position: relative; padding-right: 150px; }
-.main_container .home_banner p span::after{ content: ""; top:calc(50% - 27px); right: 0; position: absolute; width: 132px; height: 53px; display: block; background-image: url(https://www.jetfi.jp/wifi/images/logo_jetfisite.svg);}
+.main_container .home_banner p span{ font-size: 25px; position: relative; padding-right: 210px; }
+.main_container .home_banner p span::after{ content: ""; top:calc(50% - 28px); right: 0; position: absolute; width: 190px; height: 56px; display: block; background-image: url(../images/logo_h_bk.svg);}
 .main_container .home_banner .middle_content::after{ content: ""; z-index: 1; position: absolute; top: 0; left: 0; width: 225px; height: 100%; display: block; background-image: url(../images/main-banner/img_phone.png); }
 .main_container .home_banner .middle_content::before{ content: ""; z-index: 1; position: absolute; top: 0; right: 0; width: 159px; height: 100%; display: block; background-image: url(../images/main-banner/img_earth.svg); }
 .main_container .home_banner{ background-color: #8CCED4;}
@@ -321,7 +321,7 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container .top_banner .middle_content::before{ width: 120px; right: 10px; }
 	.main_container .top_banner .middle_content::after{ width: 120px; left: 10px;}
 	
-	.main_container .top_banner p span{ font-size: 16px; padding-right: 115px;}
+	.main_container .top_banner p span{ font-size: 16px; padding-right: 105px;}
 	.main_container .top_banner p span::after{ height: 40px; width: 96px; top: calc(50% - 20px);}
 	.main_container .top_banner h3{ font-size: 25px; }
 
@@ -362,9 +362,9 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 @media (max-width:768px) {
 	.header_container{ position: fixed; top: 0; left: 0; padding: 4.5px 20px; -webkit-box-shadow: 0px -3px 10px 0 #333;text-align: center;}
 	.header_container a.gnav-logo{ float: none; }
-	.header_container a.gnav-logo img{ width: 90px; height: 36px;}
+	.header_container a.gnav-logo img{ width: 110px;}
 	.header_container p.tagline{ display: none; }
-	.main_container{ padding-top: 50px;}
+	.main_container{ padding-top: 46px;}
 	.main_container .travel_plan_content .plan_info .show_more_info{ border: 1.8px solid #60A4E0;}
 	.main_container .travel_plan_content .plan_info .show_more_info .mob_show{ padding: 10px; }
 	.main_container .travel_plan_content .plan_info .show_more_info h4{ font-weight: 400; background-color: #60A4E0; color: #fff; padding-left: 15px; padding: 5px 10px;}
