--- a/iiot/taoyuang1000/game-turntable/css/style.scss
+++ b/iiot/taoyuang1000/game-turntable/css/style.scss
@@ -47,7 +47,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3c0bd', endColorstr='#fbebeb', GradientType=0);
   overflow: hidden;
   .main-container{ 
-    padding: 160px 20px 0 20px;
+    padding: 150px 20px 0 20px;
     width: 100%;
     .content {
       width: 100%;
@@ -349,6 +349,24 @@
               }
         }
       }
+    }
+  }
+}
+@media all and (max-height: 670px) {
+  .header-container {
+    padding: 20px 10px 10px 10px;
+    .back-btn {
+      position: fixed;
+      z-index: 1;
+      top: 10px;
+    }
+    &::after {
+      height: 25px;
+    }
+  }
+  .middle-container {
+    .main-container {
+      padding: 90px 20px 0 20px;
     }
   }
 }
