--- a/CRM/css/style.css
+++ b/CRM/css/style.css
@@ -794,6 +794,7 @@ p.text-remind {
 .header-container {
   padding: 9px 20px;
   width: 100%;
+  min-width: 320px;
   background-color: #fff;
   -webkit-position: -webkit-sticky;
   -moz-position: sticky;
@@ -801,7 +802,7 @@ p.text-remind {
   -o-position: sticky;
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
           box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
 }
@@ -943,6 +944,7 @@ ul.edit-tool li a:hover {
 }
 
 .middle-container {
+  min-width: 320px;
   min-height: calc(100vh - 68px);
 }
 
@@ -1080,7 +1082,7 @@ ul.edit-tool li a:hover {
 }
 
 .middle-container .main-container .tools-bar {
-  padding: 15px 0 15px 0;
+  padding: 10px 0 10px 0;
   width: 100%;
 }
 
@@ -1177,7 +1179,7 @@ ul.edit-tool li a:hover {
   position: absolute;
   left: 0;
   top: 52px;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
 }
 
@@ -1319,6 +1321,7 @@ ul.edit-tool li a:hover {
   float: left;
   padding: 0 40px 0 15px;
   position: relative;
+  margin: 0 8px 5px 0;
 }
 
 .middle-container .main-container .tools-bar .filter-search .who p {
@@ -1366,6 +1369,10 @@ ul.edit-tool li a:hover {
   .middle-container .main-container .tools-bar .filter-search {
     width: 100%;
   }
+}
+
+.middle-container .main-container .tools-bar .filter-w100 {
+  width: 100%;
 }
 
 .middle-container .main-container .tools-bar .audit-filter {
@@ -1679,6 +1686,23 @@ ul.edit-tool li a:hover {
           justify-content: center;
 }
 
+.middle-container .data-list .card p.label-audit {
+  position: absolute;
+  right: -3px;
+  top: -2px;
+  font-size: 0.688rem;
+  color: #fff;
+  background-color: #d54848;
+  float: none;
+  width: initial;
+  padding: 5px 8px;
+  z-index: 0;
+  margin-top: 0;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  border-radius: 0 0 0 10px;
+}
+
 .middle-container .data-list .card h4.product-name {
   float: left;
   color: #21534f;
@@ -1731,7 +1755,7 @@ ul.edit-tool li a:hover {
   color: #21534f;
   font-size: 0.938rem;
   line-height: 1.2rem;
-  width: calc(60% - 230px);
+  width: calc(65% - 380px);
   padding-left: 55px;
   position: relative;
   letter-spacing: 1px;
@@ -1804,6 +1828,17 @@ ul.edit-tool li a:hover {
   line-height: 1.25rem;
 }
 
+.middle-container .data-list .card .order-day {
+  float: left;
+  width: 100px;
+}
+
+.middle-container .data-list .card .order-day p {
+  float: none;
+  width: initial;
+  line-height: 18px;
+}
+
 .middle-container .data-list .card .step-one::before {
   background-image: url(../images/svg/percentage-01.svg);
 }
@@ -1821,7 +1856,7 @@ ul.edit-tool li a:hover {
   color: #5e5e5e;
   width: 30%;
   font-size: 0.875rem;
-  padding: 0 10px;
+  padding: 0 8px;
 }
 
 .middle-container .data-list .card p.customer-number,
@@ -1829,8 +1864,8 @@ ul.edit-tool li a:hover {
   width: 12%;
 }
 
-.middle-container .data-list .card p.order-customer {
-  width: 40%;
+.middle-container .data-list .card p.order-owner {
+  width: 12%;
   line-height: 18px;
 }
 
@@ -1845,8 +1880,7 @@ ul.edit-tool li a:hover {
 }
 
 .middle-container .data-list .card p.product-description,
-.middle-container .data-list .card p.product-valid-period,
-.middle-container .data-list .card p.order-customer {
+.middle-container .data-list .card p.product-valid-period {
   display: block;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -1877,6 +1911,7 @@ ul.edit-tool li a:hover {
   font-weight: bold;
   width: initial;
   float: none;
+  line-height: 18px;
 }
 
 .middle-container .data-list .card .order-percentage p.c-red {
@@ -2012,7 +2047,7 @@ ul.edit-tool li a:hover {
   margin-top: 4px;
 }
 
-.middle-container .data-list .card .audit-time {
+.middle-container .data-list .card .audit-time, .middle-container .data-list .card .order-time {
   float: left;
   width: 23%;
 }
@@ -2051,7 +2086,12 @@ ul.edit-tool li a:hover {
 .middle-container .data-list .toptitle-style p.audit-time,
 .middle-container .data-list .toptitle-style p.audit-money,
 .middle-container .data-list .toptitle-style p.audit-project,
-.middle-container .data-list .toptitle-style p.audit-ae {
+.middle-container .data-list .toptitle-style p.audit-ae,
+.middle-container .data-list .toptitle-style p.order-owner,
+.middle-container .data-list .toptitle-style p.order-time,
+.middle-container .data-list .toptitle-style h4.order-name,
+.middle-container .data-list .toptitle-style .order-percentage p,
+.middle-container .data-list .toptitle-style .order-day p {
   color: #11948a;
   font-weight: bold;
   line-height: 1.375rem;
@@ -2061,6 +2101,18 @@ ul.edit-tool li a:hover {
 
 .middle-container .data-list .toptitle-style:hover {
   background-color: #ebf5f4;
+}
+
+.middle-container .data-list .toptitle-style .icon-sort {
+  padding-left: 5px;
+}
+
+.middle-container .data-list .toptitle-style .click-sort {
+  cursor: pointer;
+}
+
+.middle-container .data-list .toptitle-style .click-sort:hover {
+  opacity: .8;
 }
 
 .middle-container .data-list .state-off h4.product-name {
@@ -2131,17 +2183,22 @@ ul.edit-tool li a:hover {
     width: 100%;
     padding: 0;
   }
-  .middle-container .data-list .card p.order-customer {
-    padding-left: 0px;
-    width: calc(100% - 35px);
+  .middle-container .data-list .card p.order-time {
+    width: 50%;
+  }
+  .middle-container .data-list .card p.order-owner {
+    float: right;
+    padding-right: 0px;
+    width: 25%;
+    text-align: right;
   }
   .middle-container .data-list .card .order-percentage {
-    width: 35px;
+    width: 50%;
   }
   .middle-container .data-list .card .order-percentage p {
-    line-height: 15px;
     padding: 0;
-    font-size: 0.688rem;
+    font-size: 0.875rem;
+    text-align: right;
   }
   .middle-container .data-list .card p.controller {
     width: 25%;
@@ -2161,6 +2218,12 @@ ul.edit-tool li a:hover {
   .middle-container .data-list .card p.audit-ae {
     width: 120px;
     float: right;
+  }
+  .middle-container .data-list .card p.order-time {
+    width: 50%;
+  }
+  .middle-container .data-list .card .order-day {
+    width: 25%;
   }
 }
 
@@ -2206,7 +2269,7 @@ ul.edit-tool li a:hover {
   }
   .middle-container .data-list .card p.audit-time {
     width: calc(100% - 90px);
-    padding-left: 0px;
+    padding-left: 0;
     margin-bottom: 2px;
   }
   .middle-container .data-list .card p.audit-money {
@@ -2218,7 +2281,6 @@ ul.edit-tool li a:hover {
   .middle-container .data-list .card p.audit-project {
     width: calc(100% - 150px);
     padding-left: 0px;
-    margin-top: 0;
   }
   .middle-container .data-list .card p.audit-ae {
     width: 90px;
@@ -2226,6 +2288,25 @@ ul.edit-tool li a:hover {
     text-align: right;
     margin-top: 0;
     padding-bottom: 32px;
+  }
+  .middle-container .data-list .card p.order-owner {
+    width: 50%;
+  }
+  .middle-container .data-list .card .order-percentage {
+    width: 50px;
+  }
+  .middle-container .data-list .card p.order-time {
+    width: calc(100% - 50px);
+    margin-bottom: 2px;
+  }
+  .middle-container .data-list .card .order-day {
+    width: 50%;
+  }
+  .middle-container .data-list .card .day-2 {
+    text-align: right;
+  }
+  .middle-container .data-list .card .day-2 p {
+    padding-right: 0;
   }
   .middle-container .data-list .toptitle-style p.controller {
     margin-top: 0;
@@ -2237,6 +2318,9 @@ ul.edit-tool li a:hover {
     padding-bottom: 0;
   }
   .middle-container .data-list .toptitle-style p.audit-time {
+    margin-bottom: 0;
+  }
+  .middle-container .data-list .toptitle-style p.order-time {
     margin-bottom: 0;
   }
 }
