--- a/iiot/taoyuang1000/join-tycg/css/style.css
+++ b/iiot/taoyuang1000/join-tycg/css/style.css
@@ -50,6 +50,7 @@ input:-webkit-autofill { box-shadow: 0 0 0px 1000px white inset !important;}
 
 .logo{ width: 125px; height: 96px; display: block; margin: 10px auto; background: url(../images/logo.svg) center center no-repeat; background-size: contain; }
 .logo-s{ width: 100%; height: 30px; background: url(../images/img-TC-card-s.svg) center center no-repeat; background-size: contain; margin: 10px 0 50px 0; }
+.ttpush-logo-s{ width: 100%; height: 62px; background: url(../images/TTPush-logo.png) center center no-repeat; background-size: contain; margin: 10px 0 20px 0; }
 
 .landing{ min-width: 320px; background: url(../images/bg.png); display: block; background-size: cover;}
 .landing .logo{margin-top: 6vh;}
